# llm-injection-bench

./: .gitignore  LICENSE  README.md  ROADMAP.md  index.html  main.py  project_plan.md  pyproject.toml
content/: phase_2.md
dataset/: CURATION_NOTES.md  audit_queue.csv  benign_samples.json  labeled_audit.json  payloads.json
dataset/scripts/: export_data.py  merge_kaggle.py
results/: l3_webhook_trials.csv  phase1_raw.csv  phase2_defense_benchmark.csv  phase3_defense_benchmark.csv
src/: evaluator.py  evaluator_l3_webhook.py  evaluator_phase2.py  evaluator_phase3.py  metrics.py  visualize.py  webhook_server.py
src/attacks/: combine_attacker.py  injector.py
src/clients/: __init__.py  base.py  claude_client.py  gemini_client.py  groq_client.py
src/defenses/: __init__.py  data_sentinel.py  embedding_filter.py  llm_judge.py  reference_payloads.json  spotlighting.py
