[project]
name = "llm-injection-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "datasets>=4.7.0",
    "google-generativeai>=0.8.6",
    "groq>=1.1.1",
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "mistune>=3.2.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
]
